codegen/tests/attribute_provide/fail/struct_def.rs
use depcon::*;

#[provide]
struct Bad;

fn main() {}
