codegen/tests/attribute_provide/fail/struct_def.stderr
error: expected `impl`
 --> tests/attribute_provide/fail/struct_def.rs:4:1
  |
4 | struct Bad;
  | ^^^^^^
